# house_on_treee

./: .gitignore  Makefile  README.md  app.py  docs.py  main.py  pyproject.toml  todo.md
house_on_treee/: __init__.py  models.py
house_on_treee/domain/: models.py
house_on_treee/repository/: db.py  models.py
house_on_treee/serizalizers/: models.py
house_on_treee/tests/: __init__.py  test_models.py  test_use_cases.py  test_views.py  tests.py
house_on_treee/use_cases/: use_cases.py
house_on_treee/views/: routes.py  views.py
series_log/: 1.md  2.md
