[tool.poetry]
name = "house-on-treee"
version = "0.1.0"
description = ""
authors = ["Kartashov Ivan <kartashevia@inmeta.ru>"]
readme = "README.md"
packages = [{include = "house_on_treee"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
sqlalchemy = "^2.0.11"
make = "^0.1.6.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
